@@ -3,7 +3,7 @@
 \name{generatePPdat}
 \alias{generatePPdat}
 \title{Helper function to convert spot counts and nuclear area measurements
-into continuous events for Poisson point estimation}
+into continuous events for Poisson point estimation.}
 \usage{
 generatePPdat(area, spots)
 }
@@ -17,5 +17,5 @@ Vector of continuous events for Poisson point estimation
 }
 \description{
 Helper function to convert spot counts and nuclear area measurements
-into continuous events for Poisson point estimation
+into continuous events for Poisson point estimation.
 }
