@@ -32,6 +32,7 @@ test_that("getAutomaticCountsEstimates function works", {
 })
 
 test_that("getAutomaticCountsEstimates function throws error messages when input arguments are invalid", {
+  expect_error(getAutomaticCountsEstimates(automatic_counts, 8, 4, "x"), "volumeFracCorrection must be 'avg', 'max', or 'min'")
   expect_error(getAutomaticCountsEstimates(automatic_counts, "radius", 4), "radius must be numeric")
   expect_error(getAutomaticCountsEstimates(automatic_counts, NA, 4), "radius must be numeric")
   expect_error(getAutomaticCountsEstimates(automatic_counts, 8, "height"), "height must be numeric")
